--- a/static/public/templates/index.html
+++ b/static/public/templates/index.html
@@ -23,7 +23,7 @@
 				{{ if ne .LogoURL "" }}
 					<img src="{{ .LogoURL }}" alt="{{ .Data.Title }}" />
 				{{ else }}
-					<img src="/public/static/logo.svg" alt="{{ .Data.Title }}" />
+					<img src="/public/static/logo.svg" style=" width: 113px;  height: 80px; margin-top: 0px;" alt="{{ .Data.Title }}" />
 				{{ end }}
 			</div>
 		</header>
